src/test/deca/context/invalid/created/binary_exp/op_comp/geq_boolean_float.deca
// Description :
//    test geq entre un boolean et un float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) Opérandes de type boolean, float, attendu: ‘int’ ou ‘float’

{
boolean a;
float b;
boolean c = a >= b;
}
